# cuv.ai

backend/: dbConnection.py  main.py  pyproject.toml
backend/models/: dbModel.py
backend/router/: chats.py  graph.py  llmResponse.py  style.css  threads.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css
frontend/src/components/: Chatwindow.jsx  Sidebar.jsx  sidebar.css
